--- a/css/app.css
+++ b/css/app.css
@@ -2,24 +2,21 @@ body, html {
     background-color: gray;
     height: 100%;
 }
-
 #videos {
     position: relative;
-    width: 100%;
+    width: 70%;
     height: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    float: left;
 }
-
 #subscriber {
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
+    margin-left: 50px;
     z-index: 10;
 }
-
 #publisher {
     position: absolute;
     width: 360px;
